Fix spacing on nav icons

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -15,6 +15,10 @@
   margin-top: 0.4em;
 }
 
+.pl-1 {
+  padding-left: 0.5em;
+}
+
 @media (max-width: 600px) {
   .nav_list {
     display: none;
@@ -36,5 +40,9 @@
     display: flex;
     z-index: 2;
     margin-left: 0.8em;
+  }
+
+  .center nav {
+    padding-right: 0.5em;
   }
 }
